2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Field::sql_find(): Do not quote the string.

	* glom/libglom/data_structure/field.cc: SqlBuilder already takes 
	care of quoting so this just changed the actual value.
	This makes Quick Find work again.

2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Find: Use backend-specific LIKE or ILIKE operator instead of =.

	* glom/libglom/connectionpool.[h|cc]:
	* glom/libglom/connectionpool_backends/backend.h:
	* glom/libglom/connectionpool_backends/postgres.h:
	* glom/libglom/connectionpool_backends/sqlite.h:
	get_string_find_operator(): Return the Gnome::Gda operator enum 
	instead of the operator as a string.
	* glom/libglom/data_structure/field.[h|cc]: sql_find_operator():
	Likewise, return the Gnome::Gda operator enum.
	* glom/libglom/utils.cc: get_find_where_clause_quick():
	* glom/mode_data/box_data.cc: get_find_where_clause():
	Use Field::sql_find_operator() and Field::sql_find(), as per 
	the TODO comments.

	This was code that I forgot to change properly when porting to 
	use Gnome::Gda::SqlBuilder, so this has been broken since 
	Glom 1.16.
	Find still does not work.

2011-01-30  Murray Cumming  <murrayc@murrayc.com>

	Adapt to libgdamm API changes.

	* glom/libglom/connectionpool.cc:
	* glom/libglom/db_utils.cc: libgdamm now uses std::vector instead of 
	*Handle, like gtkmm.

2011-03-14  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* glom/libglom/init.cc: Add an include so we can use std::cerr.

2011-03-14  Murray Cumming  <murrayc@murrayc.com>

	libglom_init(): Show the python exception when PyDateTime_IMPORT fails.

	* glom/libglom/init.cc: The linker seems to behave differently when this
	code is run from inside a JVM in OnlineGlom. This gives us a clue.

2011-02-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the CSV import test.

	* tests/import/test_parsing.cc: Correct the number of expected tokens.
	This was previously just the number that was (incorrectly) parsed before.
